Jun 21 2003  2.9.1  Added tcpclient hooks for cardlist
Jun 20 2003  2.9.1  Added CARD protocol to report card info to client
                    Minor tweak to how children link to GPS
Jun 18 2003  2.9.1  Actually fixed GPS
                    Fixed packet/network delta calculations (Sushila)
Jun 17 2003  2.9.1  Hopefully fixed gps with new packet path
Jun 15 2003  2.9.1  Fixed to handle ENOBUF cleanly in IPC
                    Rolled in OSX/Viha support from Sushila :)
                    Updated docs to reflect Viha support
Jun 14 2003  2.9.1  Tweaked queuing order of fatal text messages in IPC
Jun 11 2003  2.9.1  I hate IPC.  Replaced entire stream-pipe IPC core with
                     unix dgram sockets and it works much better.
                    Added IPC command acks to throttle channel hopping if the
                     card can't support changing as quickly as requested.
Jun 10 2003  2.9.1  Yet more work on the IPC.  More issues resolved.
                    Added code to silence capchildren if server it silent
Jun 09 2003  2.9.1  Tweaked configure to strip debugging symbols from OSX
                     OSX builds.  Some OSX gcc's are broken.
                    Worked on capchild IPC more.  Maybe this will finally fix
                     blocking and multisource issues.
Jun 08 2003  2.9.1  Tweaked kismet_monitor to set PATH var for suidinstalls
                    Tweaked IPC code to try to prevent blocking lockups.
                    Revamped packetsource opening in capchildren.
Jun 07 2003  2.9.1  Tweaked kismet_monitor to force snmp version 1 for wsp100
                    Fixed initial channel argument (Million)
                    Fixed sub-1-second recurring timer events (like channel
                     hopping)
Jun 06 2003  2.9.1  Implemented wireless-extention IOCTL fetching of current
                     channel for the appropriate capture types.
                    Caught capture sources that don't return valid fd's to the